--- a/main.css
+++ b/main.css
@@ -3,7 +3,7 @@
     font-family:Arial, Helvetica, sans-serif;
     font-weight:600;
 }
-/*this is breaking the burger menu, check if making this only applicable on lg helps*/
+
 .nav-link {color:#023047;
     font-family:Arial, Helvetica, sans-serif;
     font-weight:600;
@@ -17,4 +17,25 @@ nav{background-color:#FFB703;}
 
 .btn {color:#023047;
     background-color:#FB8500;
+}
+
+img#howToHireCarousel {height:20rem;}
+
+h5, p, h2 {color:#023047;}
+
+button {color:#023047;
+    background-color:#FB8500;
+}
+
+#bikePicker {justify-content:center;
+    border: 20px;
+border-color:#219EBC;
+background-color:#219EBC;
+padding-top:2em;
+padding-bottom:5em;}
+
+#bikeSelectCarousel {display:block;
+    margin-left:auto;
+    margin-right:auto;
+    
 }
