--- a/main.css
+++ b/main.css
@@ -39,3 +39,49 @@ padding-bottom:5em;}
     margin-right:auto;
     
 }
+    
+#mountainBike{
+    width: 50%;
+    margin-left: 10px;
+    padding:100px; 
+    }
+
+#kidsBike{
+        width: 50%;
+        margin-left: 10px;
+        padding:100px;    
+        
+    }
+
+#womens{
+        width: 50%;
+        margin-left: 10px;            
+        padding:100px;        
+    }
+
+ .imageTextL{
+    
+    margin-left: 1000px;
+    margin-top: -400px;
+    padding: 0px;
+    }
+   
+
+#BikePadding{
+    background-color: #FFB703;
+    padding: 100px;
+}
+
+#mapPadding{
+ 
+    padding: 10px;
+}
+
+#cycleT{
+    width: 50%;
+    margin-left: 10px;
+}
+
+#map 
+{ position: relative; top: 0; bottom: 0; width: 100%; height: 50%; margin-top:  0px; margin-left: 0px; margin-right: 100px;}
+
