--- a/main.css
+++ b/main.css
@@ -29,18 +29,113 @@ button {color:#023047;
 
 #bikePicker {justify-content:center;
     border: 20px;
-border-color:#219EBC;
-background-color:#219EBC;
+border-color:#FFB703;
+background-color:#FFB703;
 padding-top:2em;
-padding-bottom:5em;}
+padding-bottom:5em;
+}
 
 #bikeSelectCarousel {display:block;
     margin-left:auto;
     margin-right:auto;
     
 }
+
+#titlestyle2 {
+    border: 15px ;
+    padding-top: 50px;
+    padding-bottom: 10px;
+    margin: 20px;
+    text-align: center;
+    color: grey;
+  }
+
+  .button {
+    background-color: #219EBC; /* Green */
+    border: none;
+    color: white;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    border-radius: 30px;
+  }
     
-#mountainBike{
+.carousel-caption{margin-top:auto}
+
+/*Caroline's*/
+
+*{
+    margin: 0;
+    padding: 0;
+    font-family: Arial, Helvetica, sans-serif ;
+    box-sizing: border-box; 
+}
+.footer{ 
+    margin-top: 150px;
+    width: 100%;
+    /*padding: 100px 15%;*/
+    background: #FFB703;
+    color: #023047;
+    display: flex;
+}
+
+.footer div {
+    text-align: center;
+    margin-left:300px;
+
+}
+
+.col-2{
+    flex-grow: 2;
+}
+
+.footer div h3{
+    font-weight: 300;
+    margin-bottom: 30px;
+    letter-spacing: 1px;
+}
+
+.col-1 a{
+    display: block;
+    text-decoration: none;
+    color: #023047;
+    margin-bottom: 10px;
+}
+form input{
+    width: 400px;
+    height: 45px;
+    border-radius: 4px;
+    text-align: center;
+    margin-top: 40px;
+    margin-bottom: 40px;
+    outline: none;
+    border: none;
+}
+form button{
+    background:transparent;
+    border: 2px solid #023047;
+    color: #023047;
+    border-radius: 30px;
+    padding: 10px 30px;
+    font-size: 15px
+    cursor pointer;
+}
+
+ .social-icons{
+    margin-top: 30px;
+ }
+
+  .social-icons i{
+    font-size: 22px;
+    margin: 10px;
+    cursor: pointer;
+    color: #023047
+  }
+
+   
+  #mountainBike{
     width: 50%;
     margin-left: 10px;
     padding:100px; 
@@ -75,6 +170,7 @@ padding-bottom:5em;}
 #mapPadding{
  
     padding: 10px;
+    position: relative;
 }
 
 #cycleT{
@@ -83,5 +179,11 @@ padding-bottom:5em;}
 }
 
 #map 
-{ position: relative; top: 0; bottom: 0; width: 100%; height: 50%; margin-top:  0px; margin-left: 0px; margin-right: 100px;}
+{ position: relative; top: 0; bottom: 0; width: 100%; height: 450px; margin-top:  0px;  margin-left: 420px; margin-right: 100px; padding-bottom: 20px;}
+
+#howToHireCarousel{}
+
+
+
+
 
